[project]
name = "llmplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.34.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.6",
    "markdownify>=1.1.0",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "pinecone>=7.3.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "tensorflow==2.15",
    "transformers>=4.54.1",
]
